tests/errors/syntax.UnterminatedString.2.res
══╡ Syntax Error ╞════════════════════════════════════════════════════════════════════════════════════════ <script> ══

  Unable to parse input code

  Issue found when trying to parse:
      String
  
  Missing:
      closing double quote (`"`)

  ┃ File: tests/errors/syntax.UnterminatedString.2.art
  ┃ Line: 4
  ┃ 
  ┃    2 ║      done
  ┃    3 ║  }
  ┃    4 ║► this "something else